objects/LLC_BI__Credit_Memo_Modifcation__c.object
<CustomObject>
    <description>This object is used to make changes to a Loan after the initial approval, but before it is closed/ booked.</description>
    <fields>
        <fullName>LLC_BI__Amount_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box indicates if a change of amount is the reason a modification is being created.</description>
        <label>Loan Amount Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically populated based on system configuration. The checkbox is populated based on change request&apos;s category.</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Status__c</fullName>
        <description>This field is automatically set by the approval process and is used in triggers to update the loan wall. It is used to specify the status of the memo.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Approved</fullName>
                    <default>true</default>
                    <label>Not Approved</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change on the loan is a change in collateral. This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Collateral Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;memo.memo-details&apos;</defaultValue>
        <description>This field is used to determine the default landing page for this loan within the nCino User Interface.</description>
        <inlineHelpText>This field is used to determine the default landing page for this loan within the nCino User Interface.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is a free form text field. It is optional and manually entered. It is used to input more information or details for the memo.</description>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Equity_Injection_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change to the loan is for the equity injection.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Equity Injection Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change to the loan is adding a guarantor. This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Guarantor Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantor_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change on the loan is removing a guarantor.</description>
        <label>Guarantor Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This checkbox is used to specify if the change on the loan is a life insurance change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Life Insurance Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Term_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify if the change to the loan was that of a term change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <inlineHelpText>Interest rate change, length, etc</inlineHelpText>
        <label>Loan Term Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is a master-detail field to the loan object and is used to associate the Memo to a particular loan. This field is automatically populated when a memo is started from a loan, and is required to associate the correct memo with the loan it is associated to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Memos</relationshipLabel>
        <relationshipName>Change_Memos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Memo_Type__c</fullName>
        <description>This field is manually selected and is required when starting a memo. This field indicates the type of the Memo being created.</description>
        <label>Memo Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Memo</fullName>
                    <default>true</default>
                    <label>Change Memo</label>
                </value>
                <value>
                    <fullName>Counter Offer</fullName>
                </value>
                <value>
                    <fullName>Contingent Approval</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Rate_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify if the change to the loan is a new rate being requested.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>New Rate Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notify_Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the attorney will be notified of this Memo.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Notify Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify a change other than those listed on the Memo page. This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Post_Close_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the changes made to the loan relate to post close items.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Post Close Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Re_approval_After_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the change is related to a re-approval of the loan after its expiry.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Re-Approval After Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the Memo is ready to be sent for approval.</description>
        <inlineHelpText>Check this when your loan modification is ready to be sent for approval.</inlineHelpText>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Seller_Note_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the change on the loan is related to a seller note change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Seller Note Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Use_of_Proceeds_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected and optional. This check box is used to specify that the change on the loan is a use of proceeds change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
        <label>Use of Proceeds Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__User_Initiated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is automatically set and is used to indicate if the Memo was initiated by a user. If the Memo was initiated via an automated process, then the value will be set to false and the record will be excluded from user initiated Memo restrictions.</description>
        <label>User_Initiated</label>
        <type>Checkbox</type>
    </fields>
    <label>Memo</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Memo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>